# Strecs3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_JP.md  VtkProcessor.cpp  VtkProcessor.h  cgalProcessor.cpp  cgalProcessor.h  lib3mfProcessor.cpp  lib3mfProcessor.h  main.cpp  mainwindow.cpp  mainwindow.h  vcpkg.json
.github/workflows/: build.yml
UI/: Button.cpp  ColorManager.cpp  ColorManager.h  CustomCheckBox.h  DensitySlider.cpp  DensitySlider.h  DisplayOptionsContainer.cpp  ImportTab.cpp  ImportTab.h  MessageConsole.cpp  ModeComboBox.cpp  ModeComboBox.h  ObjectDisplayOptionsWidget.cpp  ObjectDisplayOptionsWidget.h  PreviewTab.cpp  PreviewTab.h  SceneRenderer.cpp  SceneRenderer.h  SettingsTab.cpp  SettingsTab.h  mainwindowui.cpp  mainwindowui.h
UI/widgets/: Button.cpp  Button.h  CustomCheckBox.cpp  DensitySlider.cpp  DisplayOptionsContainer.h  MessageConsole.cpp  MessageConsole.h  ModeComboBox.cpp  ModeComboBox.h  ObjectDisplayOptionsWidget.cpp  ObjectDisplayOptionsWidget.h
cmake/: common_settings.cmake  macos_settings.cmake  windows_settings.cmake
core/: ApplicationController.cpp  ApplicationController.h  ExportManager.cpp  ExportManager.h  FileProcessor.cpp  FileProcessor.h  MainWindowUIAdapter.cpp  MainWindowUIAdapter.h  Mode.h  ProcessPipeline.cpp  ProcessPipeline.h  SceneDataController.cpp  VisualizationManager.cpp  VisualizationManager.h  VtkProcessor.cpp  VtkProcessor.h  lib3mfProcessor.cpp  lib3mfProcessor.h
core/application/: ApplicationController.cpp  ApplicationController.h  MainWindowUIAdapter.cpp  MainWindowUIAdapter.h
core/export/: ExportManager.cpp  ExportManager.h
core/interfaces/: IUserInterface.cpp  IUserInterface.h
core/processing/: ProcessPipeline.cpp  ProcessPipeline.h  VtkProcessor.cpp  VtkProcessor.h  lib3mfProcessor.cpp  lib3mfProcessor.h
core/visualization/: SceneDataController.cpp  SceneDataController.h  VisualizationManager.cpp
examples/bracket/: bracket.stl  bracket_Results.vtu
examples/cantilever/:  simple_canti.stl  simple_canti_Results.vtu
examples/drone/: drone.stl
examples/tablet_stand/: tablet_stand.stl
profiles/: prusa.json
resources/: resources.qrc
utils/: fileUtility.cpp  fileUtility.h  tempPathUtility.cpp  tempPathUtility.h  xmlConverter.cpp  xmlConverter.h  zipUtility.cpp  zipUtility.h
